# spdx-identity

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: IDENTITY_RESOLUTION.md
spdx_identity/: __init__.py  constants.py  purl_normalizer.py  resolver.py
tests/: test_purl_normalizer.py  test_resolver.py
