[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spdx-identity"
version = "0.1.0"
description = "SPDX element identity resolution — stable natural keys from nondeterministic spdxIds"
requires-python = ">=3.12"
license = "MIT"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
]
